--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .fade-in {
-  animation: fadeIn 5s ease-in;
+  animation: fadeIn 8s ease-in;
   animation-delay: 1s;
 }
 
@@ -66,3 +66,6 @@ img, video {
     font-size: 1rem;
   }
 }
+
+.competences li {
+  width: 5%;}
